@@ -4,6 +4,7 @@ cm4all-beng-proxy (0.3.1) unstable; urgency=low
     headers
   * http-client: don't read body after invoke_response()
   * fork: retry splice() after EAGAIN
+  * fork: don't close input when splice() fails
 
  --
 
